--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="talk-examples center">
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-1.png)">
                             <h3>Автосалон</h3>
-                            <button data-audio="/audio/example.mp3"  class="talk-audio btn center" type="button">
+                            <button data-audio="/audio/example1.mp3"  class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
                                 </svg>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-2.png)">
                             <h3>Кредитование</h3>
-                            <button data-audio="/audio/example.mp3" class="talk-audio btn center" type="button">
+                            <button data-audio="/audio/example2.mp3" class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
                                 </svg>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-3.png)">
                             <h3>Салон красоты</h3>
-                            <button data-audio="/audio/example.mp3" class="talk-audio btn center" type="button">
+                            <button data-audio="/audio/example3.mp3" class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
                                 </svg>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-4.png)">
                             <h3>Недвижимость</h3>
-                            <button data-audio="/audio/example.mp3" class="talk-audio btn center" type="button">
+                            <button data-audio="/audio/example4.mp3" class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
                                 </svg>
