--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </button>
                         </div>
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-2.png)">
-                            <h3>Кредитование</h3>
+                            <h3>Стоматология</h3>
                             <button data-audio="/audio/example2.mp3" class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
@@ -142,7 +142,7 @@
                             </button>
                         </div>
                         <div class="talk-examples__item" style="background-image: url(/images/talk-example-3.png)">
-                            <h3>Салон красоты</h3>
+                            <h3>Установка кухни</h3>
                             <button data-audio="/audio/example3.mp3" class="talk-audio btn center" type="button">
                                 <svg class="talk-examples-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
                                     <path d="M12 6.5L0 12.5L6.05683e-07 0.5L12 6.5Z" fill="white"/>
